# shell-command-logger

./: .gitignore  .todos  MANIFEST.in  README.md  mkdocs.yml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  typescript  vercel-deploy.sh
docs/: aliases.md  configuration.md  created-with.md  index.md  installation.md  output-files.md  symlinks.md  todo.md
docs/assets/: README.txt  intro.cast
docs/log/: manual.md  shebang.md
overrides/partials/: copyright.html
src/: scl  scl-alias  scl-config  scl-record-script  scl-replay  sclm
src/shell-command-logger/: pretty_exec.py  simple_recorder.py  simple_replay.py
src/shell_command_logger/: __init__.py  alias.py  backports.py  config.py  debug.py  default_aliases.txt  list_manager.py  main_file.py  output_dir_readme_template.md  pretty_exec.py  recorder.py  replay.py  search.py  symlink.py
src/shell_command_logger/cli/: alias.py  check.py  config.py  log.py  main.py  replay.py  search.py  symlink.py
src/shell_command_logger/logger/: __init__.py  base_class.py  python_logger.py  script_linux.py  script_macos.py  script_macos_man_page.txt
