[metadata]
name = shell-command-logger
version = 0.2.0
author = six-two
author_email = pip@six-two.dev
description = Logs the output of commands, so that it can be replayed later
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/six-two/shell-command-logger
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
scripts =
    bin/scl
    bin/scl-replay
install_requires =
    termcolor>=1.1.0

[options.packages.find]
where = src
