[metadata]
name = shell-command-logger
# @SYNC /src/shell_command_logger/__init__.py -> __version__
version = 0.4.0
author = six-two
author_email = pip@six-two.dev
description = Logs the output of commands, so that it can be replayed later
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/six-two/shell-command-logger
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.9
scripts =
    src/scl
install_requires =

# SEE https://stackoverflow.com/questions/49820305/how-to-put-extras-require-in-setup-cfg
[options.extras_require]
full = termcolor>=1.1.0; python-dateutil>=2.8.0

[options.packages.find]
where = src
